src/css/components/_projects.scss
.projects {
  padding-top: calc(var(--gutter) * 10);

  &__inner {
    max-width: var(--content-width);
    padding: 0 var(--gutter);
    margin: 0 auto;

    > h1 {
      font-size: 3rem;
      font-weight: bold;
      letter-spacing: 2px;
      margin-bottom: var(--gutter);
    }

    > p {
      margin-bottom: calc(var(--gutter) * 5);
    }
  }

  &__item {
    display: flex;
    flex-direction: column-reverse;

    @include media(">tablet") {
      flex-direction: row;

      &:nth-child(odd) {
        flex-direction: row-reverse;

        .content {
          margin-left: calc(var(--gutter) * 3);
        }
      }

      &:nth-child(even) {
        .content {
          margin-right: calc(var(--gutter) * 3);
        }
      }
    }

    &:not(:last-of-type) {
      margin-bottom: 8rem;
    }

    .content {
      display: flex;
      flex-direction: column;
      justify-content: center;

      &__title {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: space-between;
        margin-bottom: var(--gutter);

        @include media(">tablet") {
          flex-direction: row;
        }

        h1 {
          font-size: 1.75rem;
          letter-spacing: 2px;
          font-weight: bold;
        }

        &__buttons {
          display: flex;
          margin-top: var(--gutter);

          @include media(">tablet") {
            margin-top: unset;
          }

          a:not(:last-of-type) {
            margin-right: 1.5rem;

            @include media(">tablet") {
              margin-right: 0.5rem;
            }
          }
        }
      }
    }

    p {
      &:not(:last-of-type) {
        margin-bottom: var(--gutter);
      }

      em {
        font-weight: bold;
      }
    }
  }

  .window {
    $radius: 6px;

    display: flex;
    flex-direction: column;
    justify-content: center;
    position: relative;
    user-select: none;
    background-color: var(--dark);
    border-radius: 6px;
    backface-visibility: hidden;
    width: 100%;
    margin-bottom: 2rem;

    @include media(">tablet") {
      min-width: 350px;
      max-width: 350px;
      margin-bottom: unset;
      transition: all 200ms;

      &:hover {
        transform: scale(1.048);
        box-shadow: 10px 25px 15px 2px var(--dark);
      }
    }

    &__bar {
      display: flex;
      justify-content: center;
      align-items: center;
      position: relative;
      background-color: var(--dark);
      min-height: 25px;
      width: 100%;
      border-top-left-radius: $radius;
      border-top-right-radius: $radius;
      border: 2px solid var(--dark);

      @mixin window-button {
        content: "";
        position: absolute;
        width: 10px;
        height: 10px;
        border-radius: 50%;
        top: 5px;
      }

      &:before,
      &:after {
        @include window-button;
      }

      &:before {
        background-color: #fe5f57;
        top: 7px;
        left: 5px;
      }

      &:after {
        background-color: #febb2c;
        top: 7px;
        left: 20px;
      }

      span {
        color: var(--light);
        font-size: 0.75rem;
        text-align: center;

        &:before {
          @include window-button;

          background-color: #28cc42;
          top: 7px;
          left: 35px;
        }
      }
    }

    &__address {
      display: flex;
      align-items: center;
      justify-content: center;
      min-height: 25px;
      width: 100%;
      border-right: 2px solid var(--dark);
      border-left: 2px solid var(--dark);
      background-color: var(--light);

      @mixin window-ui-button {
        font-size: 0.75rem;
        text-align: center;
        font-weight: bold;
        position: absolute;
        background-color: rgba(black, 0.15);
        height: 15px;
        width: 15px;
        border-radius: 3px;
      }

      &:before {
        @include window-ui-button;
        content: "<";
        left: 5px;
      }

      &:after {
        @include window-ui-button;
        content: ">";
        left: 25px;
      }

      span {
        width: 60%;
        text-align: left;
        background-color: rgba(black, 0.25);
        font-size: 0.6rem;
        padding: 0.1rem 0.2rem;
        border-radius: 3px;

        &:after {
          @include window-ui-button;
          content: "=";
          right: 5px;
        }
      }
    }

    img {
      position: relative;
      width: 100%;
      height: auto;
      border: 2px solid var(--dark);
      border-top: none;
      border-bottom-left-radius: $radius;
      border-bottom-right-radius: $radius;
    }
  }
}

